# example-simulators

./: .gitpod.yml  Cargo.toml  README.md  doc-gen.bat  doc-gen.ps1  doc-gen.sh
.github/workflows/: general.yml
docs/: crates.js  index.html  search-index.js  settings.html  source-files.js
docs/example_simulators/: all.html  fn.main.html  index.html
docs/fdc_gun_comms/: all.html  enum.Ammunition.html  enum.Compliance.html  enum.FdcGunMessage.html  enum.Status.html  index.html  sidebar-items.js  struct.TargetLocation.html
docs/fdc_gun_comms/codec/: index.html  sidebar-items.js  struct.FdcGunMessageDecoder.html  struct.FdcGunMessageEncoder.html
docs/fdc_sim/: all.html  fn.main.html  index.html  sidebar-items.js
docs/fdc_sim/fo_fdc_commhandler/: fn.fo_fdc_commhandler_loop.html  fn.recv_loop.html  fn.send_loop.html  index.html  sidebar-items.js
docs/fdc_sim/state_machine/: enum.FdcState.html  enum.OnlineState.html  fn.state_machine_loop.html  index.html  sidebar-items.js
docs/fo_fdc_comms/: all.html  enum.Ammunition.html  enum.FoFdcMessage.html  index.html  sidebar-items.js  struct.FireRequester.html
docs/fo_fdc_comms/battle_damage_assessment/: index.html  sidebar-items.js  struct.BattleDamageAssessment.html
docs/fo_fdc_comms/message_to_observer/: index.html  sidebar-items.js  struct.MessageToObserver.html  struct.TargetNumber.html
docs/fo_fdc_comms/readback/: enum.SolidReadback.html  index.html  sidebar-items.js  struct.SolidReadback.html
docs/fo_fdc_comms/request_for_fire/: enum.MethodOfFire.html  enum.MissionType.html  enum.TargetLocation.html  index.html  sidebar-items.js  struct.TargetDescription.html  struct.WarnOrder.html
docs/fo_fdc_comms/shot_fire/: index.html  sidebar-items.js  struct.RoundsComplete.html  struct.Shot.html  struct.Splash.html
docs/fo_sim/: all.html  fn.main.html  index.html  sidebar-items.js
docs/fo_sim/fo_fdc_commhandler/: enum.FromFdcMessage.html  enum.ToFdcMessage.html  fn.fo_fdc_commhandler_loop.html  fn.recv_loop.html  fn.send_loop.html  index.html  sidebar-items.js
docs/fo_sim/state_machine/: enum.ConnectedState.html  enum.FoState.html  fn.state_machine_loop.html  index.html  sidebar-items.js
docs/implementors/core/clone/: trait.Clone.js
docs/implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
docs/implementors/core/convert/: trait.From.js  trait.TryFrom.js
docs/implementors/core/default/: trait.Default.js
docs/implementors/core/fmt/: trait.Debug.js
docs/implementors/core/hash/: trait.Hash.js
docs/implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
docs/implementors/num_enum/: trait.TryFromPrimitive.js
docs/src/example_simulators/: main.rs.html
docs/src/fdc_gun_comms/: codec.rs.html  lib.rs.html
docs/src/fdc_sim/: fo_fdc_commhandler.rs.html  main.rs.html  state_machine.rs.html
docs/src/fo_fdc_comms/: battle_damage_assessment.rs.html  lib.rs.html  message_to_observer.rs.html  readback.rs.html  request_for_fire.rs.html  shot_fire.rs.html
docs/src/fo_sim/: fo_fdc_commhandler.rs.html  main.rs.html  state_machine.rs.html
fdc-gun-comms/: Cargo.toml
fdc-gun-comms/proptest-regressions/: lib.txt
fdc-gun-comms/src/: codec.rs  lib.rs  messages.rs
fdc-gun-comms/src/messages/: compliance.rs  convert.rs  ops.rs  status.rs
fdc-sim/: Cargo.toml
fdc-sim/.cargo/: config.toml
fdc-sim/src/: fo_fdc_commhandler.rs  main.rs  state_machine.rs
fo-fdc-comms/: Cargo.toml
fo-fdc-comms/src/: battle_damage_assessment.rs  lib.rs  message_to_observer.rs  readback.rs  request_for_fire.rs  shot_fire.rs
fo_sim/: Cargo.toml
fo_sim/.cargo/: config.toml
fo_sim/src/: fo_fdc_commhandler.rs  main.rs  state_machine.rs
(+6 files in other folders)
