[package]
name = "fdc-gun-comms"
version = "0.1.0"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["net"] }
tracing = { version = "0.1.32" }

thiserror = "1.0.30"

num_enum = "0.5.7"

byteorder = "1.4.3"

[dev-dependencies]
proptest = "1.0.0"
proptest-derive = "0.3.0"
