[package]
name = "fdc-gun-comms"
version = "0.1.0"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-util = { version = "0.7.1", features = ["codec"] }
bytes = "1.1.0"

num_enum = "0.5.7"

byteorder = "1.4.3"

itertools = "0.10.3"

[dev-dependencies]
proptest = "1.0.0"
proptest-derive = "0.3.0"
