[package]
name = "fdc-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fo-fdc-comms = { path = "../fo-fdc-comms" }

tokio = { version = "1.17", features = [
    "net",
    "signal",
    "macros",
    "rt-multi-thread",
] }

tracing = { version = "0.1.32" }
tracing-subscriber = "0.3"

serde_json = "1.0.79"

anyhow = "1.0.56"
