[package]
name = "fo-fdc-comms"
version = "0.1.0"
edition = "2021"
description = "Provides the JSON over UDP behavior for FO-FDC communication"
publish = false

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
regex = "1.5.5"

tokio = { version = "1.17.0", features = ["net"] }

[dev-dependencies]
proptest = "1.0.0"
proptest-derive = "0.3.0"
