[package]
name = "fo_sim"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17", features = [
    "net",
    "signal",
    "macros",
    "rt-multi-thread",
] }
tokio-util = "0.7.1"

tracing = { version = "0.1.32" }
tracing-subscriber = "0.3"

fo-fdc-comms = { path = "../fo-fdc-comms" }

serde_json = "1.0.79"

anyhow = "1.0.56"
